src/scss/components/_contact-item.scss
.contact-item {
  position: relative;
  font-size: 14px;
  font-weight: bold;
  line-height: 22px;
  color: $primary-color-2;

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;

  @media(min-width: $screen-md) {
    font-size: 12px;
    line-height: 45px;
  }

  &:after {
    content: "";
    display: table;
  }
}

.contact-item--name {
  overflow: hidden;
  margin-bottom: 5px;
  a {
    color: $primary-color-1;
    overflow: hidden;
  }
  @media(min-width: $screen-md) {
    margin-bottom: 0;
  }
}

.contact-item--jobtitle {
}

.contact-item--organization {
  text-align: right;
  @media(min-width: $screen-md) {
    text-align: left;
  }
}

.contact-item--bundle {
  display: none;

  @media(min-width: $screen-md) {
    display: block;
  }
}

.contact-search {
  padding: 0 20px;
}

.contact-search-submit {
  position: absolute;
  top: 2px;
  right: 17px;
  opacity: 0;
  width: 40px;
}

.contact-item__markers {
  width: 20px;
  display: inline-block;
  position: absolute;
  top:0;
  right: 40px;
  @media(min-width: $screen-md) {
    margin-top: 5px;
    height: 40px;
    right: 0;
  }
}

.contact-item__verified {
  height: 22px;
  display: block;
  line-height: 24px;
  color: lighten($primary-color-2, 10);

  i.fa {
    font-size: 20px;
  }
}

.contact-item__key-contact {
  display: block;
  float: left;
  background-color: $primary-color-1;
  border-radius: 50%;
  width: 18px;
  height: 18px;
  color: white;
  line-height: 18px;
  font-weight: normal;
  padding-left: 2px;
  font-family: helvetica;
  margin: 2px 5px 0 0;
  @media(min-width: $screen-md) {
    float: none;
    margin: 0;
  }
  i.fa {
    color: $white;
    font-size: 14px;
  }

}

.key-contact-filter-use {
  float: left;
  margin: 2px 10px 0 0;
  width: 12px;
  height: 12px;
  font-size: 12px;
  line-height: 8px;
  padding-top: 1px;
  i.fa {
    font-size: 8px;
  }
}

.key-contact-profile-use {
  float: left;
  width: 24px;
  height: 24px;
  line-height: 29px;
  padding-left: 2px;
  margin-right: 6px;
  i.fa {
    font-size: 20px;
  }
}
.sidebar-left .fa-check-circle {
  margin-right: 7px;
}
.verified-profile-use {
  float: left;
  font-size: 28px;
  margin: -7px 5px 0 0;
}
.notes {
  padding: 25px 0;
  margin-bottom: 20px;
}
.profile-right-sidebar{
  background: $secondary-color-3;
  padding: 6px;
  &:before {
    content: '';
    position: absolute;
    top: 0;
    bottom: 0;
    z-index: -1;
    left: 60%;
    background-color: $secondary-color-3;
  }
}
.right-sidebar-group {
  padding: 0 10px 10px 0;
  border-bottom: 1px dotted #D5D5D5;
  margin-bottom: 10px;
  .profile-view__item, strong {
    padding: 0 0 0 15px;
    display: block;
    &.country{
      font-weight: bold;
    }
  }
  .group-label {
    display: block;
    color: #A8A8A8;
    margin-bottom: 15px;
    font-size: 11px;
  }
}

.same-height-wrap {
  display: table;
  .same-height-col {
    display: table-cell;
    vertical-align: top;
    float: none;
    padding: 20px 10px;
  }
}

.contact-count {
  text-align: center;
  margin-top: -30px;
  color: $text-light;
}

.org-editor-area{
  background-color: #e4e4e4;
  margin-top: 20px;
  margin-bottom: 20px;
  padding: 10px;
}

.filter-form {
  .form-group-reset {
    position: relative;
    h2 {
      margin-top: 0;
      margin-bottom: 0;
      .title {
        padding: 10px 10px 16px 3px;
        display: inline-block;
      }
    }
  }
  .btn-reset {
    //position: absolute;
    //top: 0;
    //right: 0;
    float: right;
  }
}

#contact-modal {
  .input-group-btn:last-child > .btn, .input-group-btn:last-child > .btn-group {
    line-height: 18px;
  }
}

